# bobsshop-order-service

./: .gitignore  Dockerfile  README.md  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: lint_style.yaml  pipeline.yaml
bobsshop_order_service/orders/: aws_lambda_handler.py  schemas.py  services.py
terraform/: main.tf  variables.tf
tests/integration/: test_api_gateway.py
tests/unit/: test_handler.py
