[tool.poetry]
name = "bobsshop-order-service"
version = "0.1.0"
description = ""
authors = ["Axel Almquist <axel@almquist.io>"]
readme = "README.md"
packages = [{include = "bobsshop_order_service"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.267"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.isort]
profile = "black"

